[tool.poetry]
name = "bcferries-location"
version = "0.2.0"
description = ""
authors = ["Dustin Sampson <gridcell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
pyproj = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
black = "^18.9b0"
isort = "^4.3"

[tool.black]
line-length = 90
py36 = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
atomic=true
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
combine_as_imports=true
line_length=90
known_third_party='dask,rasterio'
known_first_party='geopixel'
indent=4
sections='FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'
no_lines_before='LOCALFOLDER'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

